# quotedby

./: Dockerfile  Makefile  README.md  docker-compose.yml  engine.py  main.py  models.py  pyproject.toml  scanner.py
quotedby/: __init__.py  database.py  main.py
quotedby/api/: models.py  projects.py  scans.py
quotedby/repositories/: defamation_repo.py  project_repo.py  scan_repo.py
quotedby/schemas/: models.py
quotedby/services/: defamation_service.py  project_service.py  scan_service.py
quotedby/static/: index.html  preview-1.html  preview-10.html  preview-2.html  preview-3.html  preview-4.html  preview-5.html  preview-6.html  preview-7.html  preview-8.html  preview-9.html
static/: index.html
tests/: test_api.py
