[project]
name = "quotedby"
version = "2.0.0"
description = "AI Citation Checker — monitor and defend your brand across AI models"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "aiosqlite>=0.20",
    "pydantic>=2.7",
    "loguru>=0.7",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["quotedby"]
